# my-hakaton-app

./: .gitignore  .gitlab-ci.yml  DEVOPS_GUIDE.md  README.md  check-sites.sh  docker-compose.yml  nginx.conf
infra/: notes.md
src/Backend/: .gitignore  Dockerfile  Hackathon.sln  Program.cs  docker-compose.yml
src/Backend/publish/: Backend
src/Backend/src/: src.sln
src/Backend/src/Hackathon.Api/: Hackathon.Api.csproj  Hackathon.Api.http  Program.cs  appsettings.json
src/Backend/src/Hackathon.Application/: Class1.cs  DependencyInjection.cs  Hackathon.Application.csproj
src/Backend/src/Hackathon.Domain/: Class1.cs
src/Backend/src/Hackathon.Infrastructure/: Class1.cs  DependencyInjection.cs  Hackathon.Infrastructure.csproj
src/Backend/tests/Hackathon.Application.Tests/: Hackathon.Application.Tests.csproj  UnitTest1.cs
src/DopModules/CppDocker/: CMakeLists.txt  CMakePresets.json  http.h  icmp.h  icmplib.h  main.cpp  main.h  tcp.h
src/DopModules/NotificationService/: Dockerfile  NotificationService.sln
src/DopModules/NotificationService/NotificationService.Worker/: NotificationService.Worker.csproj  appsettings.json
src/DopModules/NotificationService/src/: NotificationService.sln
src/Frontend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
src/Frontend/components/: BoardItem.jsx  DashboardStats.jsx  IndexLayout.jsx  LogsViewer.jsx  ServerForm.jsx  ServerTable.jsx
src/Frontend/components/Charts/: AvailabilityChart.jsx  ResponseTimeChart.jsx
src/Frontend/nginx/: Dockerfile.nginx  nginx.conf.http  nginx.conf.https  start-nginx.sh
src/Frontend/pages/: [slug].jsx  _app.jsx  index.jsx
src/Frontend/utils/: api.js  placeholder.js
(+103 files in other folders)
